--- a/IndexIE10.html
+++ b/IndexIE10.html
@@ -19,6 +19,8 @@
 </div>
 
 <script >
+"use strict";
+
 var xdr = new XMLHttpRequest(); 
 xdr.open("get", "https://newsapi.org/v1/articles?source=bbc-news&apiKey=358b8ba532dc444f878cce74f34b7ffe",false);
   
