--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,4 @@
-<script>
-var request = new Request('https://newsapi.org/v1/articles?source=bbc-news&apiKey=358b8ba532dc444f878cce74f34b7ffe'), init = {method:'GET',mode:'cors'};
-
-fetch(request,init)
-.then(respose => respose.json())
-.then(data => 
-{
-for (var i = 0; i <= data.articles.length - 1; i++) { 
-    document.getElementById("articles").innerHTML += document.getElementById("newsTemplate").innerHTML
-																							.replace('{title}',data.articles[i].title)
-																							.replace('{author}',data.articles[i].author)
-																							.replace(new RegExp('{url}'),data.articles[i].url);
-													};
-})
-.catch(err => console.log(err));
-</script>
+<script src="script.js"></script>
 
 <head>
 	<title>This is first task</title>
@@ -21,18 +6,8 @@ for (var i = 0; i <= data.articles.length - 1; i++) {
 
 <div id="articles"></div>
 
-<div id="newsTemplate" style="display:none">
-	<div id="news">
-	News:
-		<div id="title">
-			<a id="urlLink" href="{url}">{title}</a>
-		</div>
-		<div id="author">
-			<i id="authorText">{author}</i>
-		</div>
-		<br/>
-	</div>
-</div>
+
+
 
 
 
