--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,12 @@
 <script src="script.js"></script>
-
-<head>
-	<title>This is first task</title>
-</head>
-
-<div id="articles"></div>
+<html>
+	<head>
+		<title>This is first task</title>
+	</head>
+	<body>
+		<div id="articles"></div>
+	</body>
+</html>
 
 
 
