--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<script src="script.js"></script>
+	<script src="build.js"></script>
 		<title>This is first task</title>
 	</head>
 	<body>
